external-projects/sui-prover/crates/sui-prover/tests/snapshots/prettyprint-struct.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/prettyprint-struct.move:22:5
   │
22 │     ensures(res.b != x);
   │     ^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/prettyprint-struct.move:19: foo_spec
   =         res#1#0 = foo.MyStruct{a = 0u64, b = 0u64}
   =     at tests/inputs/prettyprint-struct.move:22: foo_spec
